Created gradle build script
Adapted REST to use only one port for Servlet and AlgrotihmTester
Created Main that calls both.
Extended README - some TODOs still left
Removed lib folder
Slightly changed run configs to accomodate for gradle build